# TFG

./: .gitignore
DFGraphComponents/: Block.cpp  Block.h  Channel.cpp  Channel.h  Cluster.cpp  Cluster.h  DFGraph.cpp  Dataflow.md  Fact5.dot  Graph.cpp  Graph.h  Makefile  SupportTypes.cpp  SupportTypes.h  Test.dot  main.cpp
DFGraphGeneration/: CMakeLists.txt
DFGraphGeneration/DFGraphPass/: CMakeLists.txt  DFGraphPass.cpp  DFGraphPass.h  inst.txt
DOTGrafs/: Attribute.cpp  Attribute.h  AttributeMultiValue.h  AttributeUniValue.h  Block.cpp  Block.h  Channel.cpp  Channel.h  Cluster.cpp  Cluster.h  Component.cpp  Component.h  DFGraph.cpp  DFGraph.h  Fact5.dot  Makefile  SupportTypes.cpp  SupportTypes.h  Test  main.cpp  prova.dot
DOTGraphComponents/: Attribute.cpp  Attribute.h  AttributeUniValue.h  Cluster.cpp  Cluster.h  SupportTypes.h
DOTGraphPass/: CMakeLists.txt
DOTGraphPass/DOTGraph/: CMakeLists.txt  DOTGraph.cpp
GetElemPtrPass/: CMakeLists.txt
GetElemPtrPass/GetElemPtrPass/: CMakeLists.txt  GetElemPtrPass.cpp
LiveVarsAnalysis/: CMakeLists.txt
LiveVarsAnalysis/LiveVarsPass/: CMakeLists.txt  LiveVarsPass.cpp  LiveVarsPass.h
Liveness/: CMakeLists.txt  Liveness.cpp
LivenessPass/: CMakeLists.txt
LivenessPass/Liveness/: CMakeLists.txt  Liveness.cpp  Liveness.h
